pkg/objects/DailyAllocation__c.object
<CustomObject>
    <description>The daily record of Employee performance hours within an Allocation.</description>
    <fields>
        <fullName>Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allocation to which the daily allocation belongs.</description>
        <inlineHelpText>Allocation to which the daily allocation belongs.</inlineHelpText>
        <label>Allocation</label>
        <referenceTo>Alocation__c</referenceTo>
        <relationshipLabel>Daily Allocations</relationshipLabel>
        <relationshipName>Daily_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>To which day this Allocation refers.</description>
        <inlineHelpText>To which day this Allocation refers.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberHoursDay__c</fullName>
        <description>Number of working hours per day.</description>
        <formula>Allocation__r.NumberHoursDay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of working hours per day.</inlineHelpText>
        <label>Number of hours a day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Daily Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Daily Allocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>